# ModbusTcpToInfluxDB

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  influx.rs  main.rs  modbus_reader.rs
src/strategies/: int16_read_strategy.rs  int32_read_strategy.rs  int64_read_strategy.rs  mod.rs  uint16_read_strategy.rs  uint32_read_strategy.rs
