[package]
name = "ModbusTcpToInfluxDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modbus = "1.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"
influxdb2 = "0.5.0"
serde_json = "1.0.114"
chrono = "0.4.35"
futures = "0.3.30"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
